# kafka-producer

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml  generator.py  main.py  producer.py  pyproject.toml  schema.toml  utils.py
src/: config.py  generator.py  main.py  utils.py
tests/: test_event_generator.py
